acvus-mir-test/tests/snapshots/script__branch_nested_match.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = ref @out
     3 |   r3 = load r2
     4 |   r4 = ref @a
     5 |   r5 = load r4
     6 |   r6 = ref @b
     7 |   r7 = load r6
     8 |   r8 = r5 + r7
     9 |   r9 = ref @out
    10 |   store r9 = r8
    11 |   r10 = ref @out
    12 |   return r8

    ; r0 (v18) : Int
    ; r1 (v19) : Int
    ; r2 (v20) : Ref<Int>
    ; r3 (v17) : Int
    ; r4 (@a) : Ref<Int>
    ; r5 (x) : Int
    ; r6 (@b) : Ref<Int>
    ; r7 (y) : Int
    ; r8 (v13) : Int
    ; r9 (@out) : Ref<Int>
    ; r10 (@out) : Ref<Int>
    ; r11 (v11) : Ref<Int>
    ; r12 (v9) : Ref<Int>
    ; r13 (y) : Int
    ; r14 (v4) : Ref<Int>
    ; r15 (x) : Int
    ; r16 (v16) : Int
    ; r17 (v8) : Ref<Int>
