acvus-mir-test/tests/snapshots/script__branch_simple_bind.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = ref @out
     2 |   r2 = load r1
     3 |   r3 = ref @data
     4 |   r4 = load r3
     6 |   r5 = r4 + 1 (r6)
     7 |   r7 = ref @out
     8 |   store r7 = r5
     9 |   r8 = ref @out
    10 |   return r5

    ; r0 (v13) : Int
    ; r1 (v14) : Ref<Int>
    ; r2 (v12) : Int
    ; r3 (@data) : Ref<Int>
    ; r4 (x) : Int
    ; r5 (v8) : Int
    ; r6 (v7) : Int
    ; r7 (@out) : Ref<Int>
    ; r8 (@out) : Ref<Int>
    ; r9 (v11) : Int
    ; r10 (x) : Int
    ; r11 (v5) : Ref<Int>
    ; r12 (v4) : Ref<Int>
