acvus-mir-test/tests/snapshots/script__combined_loop_with_branch.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = ref @count
     3 |   r3 = ref @items
     4 |   r4 = load r3
     6 |   jump L0(0 (r5), r0, r1)
     7 | L0(r6: Int, r7: Int, r8: Int):
     8 |   store r2 = r7
     9 |   list_step r9, r10 = r4[r6] else L1()
    10 | L2:
    11 |   r11 = test r9 == 0
    12 |   jump_if r11 then L3 else L4(r7)
    13 | L3:
    14 |   r12 = ref @count
    16 |   r13 = r7 + 1 (r14)
    17 |   jump L4(r13)
    18 | L4(r15: Int):
    19 |   store r2 = r15
    20 |   jump L0(r10, r15, r9)
    21 | L1:
    22 |   r16 = ref @count
    23 |   return r7

    ; r0 (v19) : Int
    ; r1 (v20) : Int
    ; r2 (v25) : Ref<Int>
    ; r3 (@items) : Ref<List<Int>>
    ; r4 (v2) : List<Int>
    ; r5 (v3) : Int
    ; r6 (v4) : Int
    ; r7 (v21) : Int
    ; r8 (v23) : Int
    ; r9 (x) : Int
    ; r10 (v6) : Int
    ; r11 (v11) : Bool
    ; r12 (@count) : Ref<Int>
    ; r13 (v15) : Int
    ; r14 (v14) : Int
    ; r15 (v22) : Int
    ; r16 (@count) : Ref<Int>
    ; r17 (v9) : Ref<Int>
    ; r18 (x) : Int
    ; r19 (v18) : Int
    ; r20 (v24) : Int
    ; r21 (v13) : Int
    ; r22 (@count) : Ref<Int>
    ; r23 (v8) : Ref<Int>
