acvus-mir-test/tests/snapshots/script__combined_nested_loop_context.snap
---
source: acvus-mir-test/tests/script.rs
assertion_line: 219
expression: ir
---
=== main ===
     0 |   r0 = fetch @outer
     1 |   assign @outer = r0
     2 |   r1 = fetch @total
     3 |   assign @total = r1
     4 |   r2 = take @outer
     5 |   r3 = call #0(r2)
     6 |   assign rows = r3
     7 |   jump L0
     8 | L0:
     9 |   r4 = ref &mut rows
    10 |   r5 = call #1(r4)
    11 |   r6 = test r5 is Some
    12 |   jump_if r6 then L1 else L2
    13 | L1:
    14 |   r7 = unwrap r5
    15 |   assign row = r7
    16 |   r8 = take row
    17 |   r9 = call #0(r8)
    18 |   assign xs = r9
    19 |   jump L3
    20 | L3:
    21 |   r10 = ref &mut xs
    22 |   r11 = call #1(r10)
    23 |   r12 = test r11 is Some
    24 |   jump_if r12 then L4 else L5
    25 | L4:
    26 |   r13 = unwrap r11
    27 |   assign x = r13
    28 |   r14 = take @total
    29 |   r15 = take x
    30 |   r16 = r14 + r15
    31 |   assign @total = r16
    32 |   jump L3
    33 | L5:
    34 |   jump L0
    35 | L2:
    36 |   r17 = take @total
    37 |   r18 = take @outer
    38 |   commit @outer = r18
    39 |   r19 = take @total
    40 |   commit @total = r19
    41 |   return r17

    ; r0 (@outer) : Array<Array<i64, 3>, 3>
    ; r1 (@total) : i64
    ; r2 (@outer) : Array<Array<i64, 3>, 3>
    ; r3 (into_iter(...)) : Iterator<Array<i64, 3>, Pure>
    ; r4 (rows.) : &mut Iterator<Array<i64, 3>, Pure>
    ; r5 (next(...)) : Option<Array<i64, 3>>
    ; r6 (v10) : Bool
    ; r7 (row) : Array<i64, 3>
    ; r8 (row) : Array<i64, 3>
    ; r9 (into_iter(...)) : Iterator<i64, Pure>
    ; r10 (xs.) : &mut Iterator<i64, Pure>
    ; r11 (next(...)) : Option<i64>
    ; r12 (v18) : Bool
    ; r13 (x) : i64
    ; r14 (@total) : i64
    ; r15 (x) : i64
    ; r16 (v23) : i64
    ; r17 (@total) : i64
    ; r18 (v25) : Array<Array<i64, 3>, 3>
    ; r19 (v26) : i64
    ; r20 (@total) : i64
    ; r21 (xs) : Iterator<i64, Pure>
    ; r22 (rows) : Iterator<Array<i64, 3>, Pure>
    ; r23 (x) : i64
    ; r24 (@outer) : Array<Array<i64, 3>, 3>
    ; r25 (row) : Array<i64, 3>
