acvus-mir-test/tests/snapshots/script__func_builtin_in_loop.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = ref @out
     3 |   r3 = ref @items
     4 |   r4 = load r3
     6 |   jump L0(0 (r5), r0, r1)
     7 | L0(r6: Int, r7: String, r8: Int):
     8 |   store r2 = r7
     9 |   list_step r9, r10 = r4[r6] else L1()
    10 | L2:
    11 |   r11 = ref @out
    12 |   r12 = call #0(r9)
    13 |   r13 = r7 + r12
    14 |   jump L0(r10, r13, r9)
    15 | L1:
    16 |   r14 = ref @out
    17 |   return r7

    ; r0 (v18) : String
    ; r1 (v19) : Int
    ; r2 (v22) : Ref<String>
    ; r3 (@items) : Ref<List<Int>>
    ; r4 (v2) : List<Int>
    ; r5 (v3) : Int
    ; r6 (v4) : Int
    ; r7 (v20) : String
    ; r8 (v21) : Int
    ; r9 (x) : Int
    ; r10 (v6) : Int
    ; r11 (@out) : Ref<String>
    ; r12 (to_string(...)) : String
    ; r13 (v14) : String
    ; r14 (@out) : Ref<String>
    ; r15 (v11) : Ref<Int>
    ; r16 (v17) : String
    ; r17 (@out) : Ref<String>
    ; r18 (v10) : String
    ; r19 (x) : Int
    ; r20 (v8) : Ref<Int>
